examples/fail/import_module_missing.hax
module Fail::ImportModuleMissing;

import ZZZ::ThisModuleDoesNotExist;

sub main() -> Int {
  return 0;
}
